# cmake_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
cmake/: config.cmake.in
include/cmake_template/: addFive.h
src/: CMakeLists.txt  addFive.cpp
src/addOne/: CMakeLists.txt  addOne.cpp  addOne.h
src/addTwo/: CMakeLists.txt  addTwo.cpp  addTwo.h
test/: CMakeLists.txt  addFiveTest.cpp
test/addOne/: addOneTest.cpp
test/addTwo/: addTwoTest.cpp
tools/: CMakeLists.txt  main.cpp
